Fix resume headings on mobile

--- a/_sass/resume.scss
+++ b/_sass/resume.scss
@@ -42,4 +42,15 @@
 		color: #1155cc;
 		text-decoration: underline;
 	}
+
+	@media screen and (min-width: 768px) {
+		&-row {
+			display: flex;
+		}
+
+		&-col {
+			width: 0;
+			flex-grow: 1;
+		}
+	}
 }
